Thymeleaf frontend updates
Updated and streamlined the frontend made of thymeleaf . delete page is replaced by delete selected button and adds batch deletion , fetch option in nav bar is replaced by the Employee Management brand (top left) by making it a clickable one . plus a few additional changes